# lua-templating

./: CHANGELOG.md  lua-templating.cabal  luatemp.cabal
exe/: Main.hs
src/Text/: Luatemp.hs
src/Text/Luatemp/: Template.hs
src/Text/Luatemp/Template/: Run.hs
src/Text/Templating/: Lua.hs
src/Text/Templating/Lua/: Parse.hs  Run.hs  Types.hs
test/: Main.hs
test-files/: README.md  greet.html  greet.html.expected  hello-world.lua  loop.html  loop.html.expected  manipulate.txt  manipulate.txt.expected
