cabal-version:      3.4
name:               lua-templating
version:            0.1.0.0
synopsis:           Lua-based templating engine for Haskell.
-- description:
homepage:           https://github.com/Solonarv/lua-templating
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Solonarv
maintainer:         nstamm@gmx.de
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -fprof-auto

common language
    default-language: Haskell2010
    -- syntax extensions ONLY
    default-extensions: ImportQualifiedPost, DerivingStrategies, BlockArguments, BangPatterns
                      , TupleSections, LambdaCase
    -- extensions that actually do stuff
    other-extensions: TypeApplications, OverloadedStrings, GeneralizedNewtypeDeriving, DeriveFunctor

library
    import:           warnings, language
    exposed-modules:  Text.Templating.Lua
                    , Text.Templating.Lua.Types
                    , Text.Templating.Lua.Parse
                    , Text.Templating.Lua.Run
    -- other-modules:
    build-depends:    base ^>=4.18.2.0
                    , hslua
                    , bytestring
                    , vector
                    , containers
                    , attoparsec
                    , filepath
                    , hashable
                    , unordered-containers
    hs-source-dirs:   src

executable render-lua-template
    import: warnings, language
    -- other-modules:
    build-depends:    base, lua-templating, optparse-applicative, bytestring
    hs-source-dirs:   exe
    main-is:          Main.hs
    

test-suite lua-templating-test
    import:           warnings, language
    -- other-modules:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.0,
        lua-templating,
        tasty, tasty-golden, filepath, bytestring
