cabal-version:      3.4
name:               luatemp
version:            0.1.0.0
synopsis:           Lua-based templating engine for Haskell.
-- description:
homepage:           https://github.com/Solonarv/luatemp
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Solonarv
maintainer:         nstamm@gmx.de
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common language
    default-language: Haskell2010
    -- syntax extensions ONLY
    default-extensions: ImportQualifiedPost, DerivingStrategies, BlockArguments, BangPatterns
    -- extensions that actually do stuff
    other-extensions: TypeApplications, OverloadedStrings, GeneralizedNewtypeDeriving

library
    import:           warnings, language
    exposed-modules:  Text.Luatemp, Text.Luatemp.Template, Text.Luatemp.Template.Run
    -- other-modules:
    build-depends:    base ^>=4.18.2.0
                    , hslua
                    , bytestring
                    , vector
                    , containers
                    , attoparsec
                    , filepath
    hs-source-dirs:   src

test-suite luatemp-test
    import:           warnings, language
    -- other-modules:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.0,
        luatemp,
        tasty, tasty-golden, filepath, bytestring
